--- a/doc/manual/manual.tex
+++ b/doc/manual/manual.tex
@@ -1138,6 +1138,54 @@ all sorts of components of models that go beyond the simple Stokes plus
 temperature set of equations. Play with them!
 
 
+\subsection{Constitutive laws}
+
+Equation \eqref{eq:stokes-1} describes buoyancy-driven flow in an isotropic
+fluid where strain rate is related to stress by a scalar (possibly spatially variable)
+multiplier, $\eta$. For some material models it is useful to generalize this
+relationship to anisotropic materials, or other exotic constitutive laws.
+For these cases \aspect{} can optionally include a generalized, fourth-order
+tensor field as a material model state variable which changes equation
+\eqref{eq:stokes-1} to
+\begin{align}
+  \label{eq:stokes-1-anisotropic}
+  -\nabla \cdot \left[2\eta \left(C \varepsilon(\mathbf u)
+                                  - \frac{1}{3}(tr(C \varepsilon(\mathbf u)))\mathbf 1\right)
+                \right] + \nabla p &=
+  \rho \mathbf g
+  & \qquad
+  & \textrm{in $\Omega$}
+\end{align}
+and the shear heating term in equation \eqref{eq:temperature} to
+\begin{align}
+  \label {eq:temperature-anisotropic}
+  \dots
+  \notag
+  \\
+  + 2 \eta
+  \left(C \varepsilon(\mathbf u) - \frac{1}{3}(tr(C \varepsilon(\mathbf u)))\mathbf 1\right)
+  :
+  \left(\varepsilon(\mathbf u) - \frac{1}{3}(\nabla \cdot \mathbf u)\mathbf 1\right)
+  \\
+  \dots
+  \notag
+\end{align}
+where $C = C_{ijkl}$ is defined by the material model. For physical reasons, $C$ needs
+to be a symmetric rank-4 tensor: i.e., when multiplied by a symmetric (strain rate)
+tensor of rank 2 it needs to return another symmetric tensor of rank 2. In mathematical
+terms this, this means that $C_{ijkl}=C_{jikl}=C_{ijlk}=C_{jilk}$. Energy considerations
+also require that $C$ is positive definite: i.e., for any $\varepsilon \neq 0$, the
+scalar $\varepsilon : (C \varepsilon)$ must be positive.
+
+This functionality can be optionally invoked by any material model that chooses to
+define a $C$ field, and falls back to the default case ($C=\mathbb I$) if no such
+field is defined. It should be noted that $\eta$ still appears in equations
+\eqref{eq:stokes-1-anisotropic} and \eqref{eq:temperature-anisotropic}. $C$ is
+therefore intended to be thought of as a ``director'' tensor rather than a
+replacement for the viscosity field, although in practice either interpretation
+is okay.
+
+
 \subsection{Numerical methods}
 
 There is no shortage in the literature for methods to solve the equations
@@ -2820,6 +2868,38 @@ start with a small value and then increase the tolerance until you come to a
 point where the output quantities start to change significantly. This is the
 point where you will want to stop.
 
+\subsubsection{Adjusting solver preconditioner tolerances} To solve the Stokes 
+equations it is necessary to lower the condition number of the
+Stokes matrix by preconditioning  it. In \aspect{} a right preconditioner $Y^{-1} = 
+\begin{pmatrix}
+\widetilde{A^{-1}} & -\widetilde{A^{-1}}B^{T}\widetilde{S^{-1}} \\
+0 & \widetilde{S^{-1}}
+\end{pmatrix}$ is used to precondition the system, where $\widetilde{A^{-1}}$ is 
+the approximate inverse of the A block and $\widetilde{S^{-1}}$ is the approximate 
+inverse of the Schur complement matrix. Matrix $\widetilde{A^{-1}}$ and 
+$\widetilde{S^{-1}}$ are calculated through a CG solve, which requires a tolerance 
+to be set. In comparison with the solver tolerances of the previous section, these 
+parameters are relatively safe to use, since they only change the preconditioner, 
+but can speed up or slow down solving the Stokes system considerably. 
+
+In practice $\widetilde{A^{-1}}$ takes by far the most time to compute, but is 
+also very important in conditioning the system. The accuracy of the computation 
+of $\widetilde{A^{-1}}$ is controlled by the parameter \texttt{Linear solver A 
+block tolerance} which has a default value of $1e-2$. Setting this tolerance 
+to a less strict value will result in more outer iterations, since the 
+preconditioner is not as good, but the amount of time to compute 
+$\widetilde{A^{-1}}$ can drop significantly resulting in a reduced total solve 
+time. The cookbook crustal deformation (Section 
+\ref{sec:cookbooks-crustal-deformation}) for example can be computed much faster 
+by setting the \texttt{Linear solver A block tolerance} to $5e-1$. The 
+calculation of $\widetilde{S^{-1}}$ is usually much faster and the 
+conditioning of the system is less sensitive to the parameter \texttt{Linear 
+solver S block tolerance}, but for some problems it might be worth it to 
+investigate.
+\index[prmindex]{Linear solver A block tolerance}
+\index[prmindexfull]{Linear solver A block tolerance}
+\index[prmindex]{Linear solver S block tolerance}
+\index[prmindexfull]{Linear solver S block tolerance}
 
 \subsubsection{Using lower order elements for the temperature/compositional discretization}
 The default settings of \aspect{} use quadratic finite elements for the
@@ -6101,14 +6181,14 @@ the current directory.
 
 
 
-\subsubsection{The van Keken thermochemical composition benchmark}
+\subsubsection{The  thermochemical composition benchmark}
 \label{sec:benchmark-van-keken}
 
 \textit{This section is a co-production of Cedric Thieulot, Juliane Dannberg,
 Timo Heister and Wolfgang Bangerth.}
 
 One of the most widely used benchmarks for mantle convection codes is the
-isoviscous Rayleigh-Taylor case (``case 1a'') published by van Keken \textit{et
+isoviscous Rayleigh-Taylor case (``case 1a'') published by  \textit{et
 al.} in \cite{KKSCND97}.
 The benchmark considers a 2d situation where a lighter fluid underlies a heavier
 one with a non-horizontal interface between the two of them. This unstable
@@ -6124,14 +6204,14 @@ illustrate this.
   \includegraphics[width=0.23\textwidth]{cookbooks/benchmarks/van-keken/movie0009.png}
   \hfill
   \includegraphics[width=0.23\textwidth]{cookbooks/benchmarks/van-keken/movie0018.png}
-  \caption{\it Van Keken benchmark (using a smoothed out interface, see the main
+  \caption{\it  benchmark (using a smoothed out interface, see the main
   text):
   Compositional field at times $t=0, 300, 900, 1800$.}
   \label{fig:vk-1}
 \end{figure}
 
 
-Although van Keken's paper title suggests that the paper is really about
+Although 's paper title suggests that the paper is really about
 thermochemical convection, the part we look here can equally be considered as
 thermal or chemical convection: all that is necessary is that we describe the
 fluid's density somehow. We can do that by using an inhomogenous initial
@@ -6164,13 +6244,13 @@ as shown in the left panel of Fig.~\ref{fig:vk-2}. Looking at this graph, we
 find that both the timing and the height of the first peak is already
 well converged on a simple
 $32\times 32$ mesh (5 global refinements) and is very consistent (to better
-than 1\% accuracy) with the results in the van Keken paper.
+than 1\% accuracy) with the results in the  paper.
 
 \begin{figure}
   \includegraphics[width=0.48\textwidth]{cookbooks/benchmarks/van-keken/velocity-discontinuous.png}
   \hfill
   \includegraphics[width=0.48\textwidth]{cookbooks/benchmarks/van-keken/velocity-smooth.png}
-  \caption{\it Van Keken benchmark with discontinuous (left) and smoothed,
+  \caption{\it  benchmark with discontinuous (left) and smoothed,
   continuous (right) initial conditions for the compositional field:
   Evolution of the root mean square velocity $\left(\frac 1{|\Omega|}\int_\Omega |\mathbf u(\mathbf x,t)|^2 \;
   dx\right)^{1/2}$ as a function of time for different numbers of global mesh
@@ -6182,7 +6262,7 @@ than 1\% accuracy) with the results in the van Keken paper.
 That said, it is startling that the second peak does not appear to converge
 despite the fact that the various codes compared in \cite{KKSCND97} show good
 agreement in this comparison. Tracking down the cause for this proved to be a
-lesson in benchmark design; in hindsight, it may also explain why van Keken
+lesson in benchmark design; in hindsight, it may also explain why 
 \textit{et al.} stated presciently in their abstract that ``\textit{\ldots good
 agreement is found for the initial rise of the unstable lower layer; however, the timing
   and location of the later smaller-scale instabilities may differ between
@@ -6215,7 +6295,7 @@ square velocity plot is in a different location and with different height!
 \begin{figure}
   \centering
   \includegraphics[width=0.7\textwidth]{cookbooks/benchmarks/van-keken/mesh-comparison-initial-conditions.png}
-  \caption{\it Van Keken benchmark with discontinuous initial conditions for the
+  \caption{\it  benchmark with discontinuous initial conditions for the
   compositional field:
   Initial compositional field interpolated onto a $32\times 32$ (left) and
   $64\times 64$ finite element mesh (right).}
@@ -6225,7 +6305,7 @@ square velocity plot is in a different location and with different height!
 \begin{figure}
   \centering
   \includegraphics[height=0.8\textheight]{cookbooks/benchmarks/van-keken/mesh-comparison.png}
-  \caption{\it Van Keken benchmark with discontinuous initial conditions for the
+  \caption{\it  benchmark with discontinuous initial conditions for the
   compositional field:
   Evolution of the compositional field over time on a $32\times 32$ (first and
   third column; left to right and top to bottom) and $64\times 64$ finite
@@ -6238,7 +6318,7 @@ experiment depends so critically on very small details like the steps of an
 initial condition, then it's probably not a particularly good measure to look at
 in a benchmark. That said, the benchmark is what it is, and so we should try to
 come up with ways to look at the benchmark in a way that allows us to reproduce
-what van Keken \textit{et al.} had agreed upon. To this end, note that the codes
+what  \textit{et al.} had agreed upon. To this end, note that the codes
 compared in that paper use all sorts of different methods, and one can certainly
 agree on the fact that these methods are not identical on small length scales.
 One approach to make the setup more mesh-independent is to replace the original
@@ -6255,15 +6335,65 @@ looks as shown in the right panel of Fig.~\ref{fig:vk-2}. Here, the second peak
 also converges quickly, as hoped for.
 
 The exact location and height of the two peaks is in good agreement with those
-given in the paper by van Keken \textit{et al.}, but not exactly where desired
+given in the paper by  \textit{et al.}, but not exactly where desired
 (the error is within a couple of per cent for the first peak, and probably
 better for the second, for both the timing and height of the peaks).
 This has to do with the fact that they depend on the exact size of the smoothing
 parameter (the division by 0.02 in the formula for the smoothed initial
 condition). However, for more exact results, one can choose
 this half width parameter proportional to the mesh size and thereby get more
-accurate results. Since the point of the section was to demonstrate the reason
-for the lack of convergence, but we leave this as an experiment to the reader.
+accurate results. The point of the section was to demonstrate the reason
+for the lack of convergence.
+
+\textit{This section contributed by Grant Euen, Tahiry Rajaonarison, and Shangxin Liu as part of the Geodynamics and ASPECT class at Virginia Tech}\\
+In this section we extend the Van Keken cookbook for the work previously completed by \textit{Cedric Thieulot, Juliane Dannberg,Timo Heister and Wolfgang Bangerth.}.
+ 
+The smooth model allows for much better convergence of secondary plumes, although they are still more scattered than the primary plumes.  The convergence of the secondary and tertiary plumes can be better constrained by altering the smoothing parameter.  This term controls how much of the problem is smoothed over: as the parameter is increased, the smoothed boundary grows and vice versa.  As the smoothed boundary shrinks it becomes sharper until the original discontinuous behavior is revealed.  As it grows the two layers eventually become one large transitioning layer rather than two distinct layers and a boundary.  The overall effect is that the secondary and tertiary plumes rise at different times based on these conditions.  In general, as the smoothing parameter is decreased, the smoothed boundary shrinks, and the plumes rise more quickly.  As it is increased, the boundary grows, and the plumes rise more slowly.  This trend can be used to force a much more accurate convergence from the secondary plumes. Testing different sizes of the smoothing parameter using refinement degree 7 (128$\times$128 mesh size) produces the images shown in Fig.~\ref{fig:vk-5}.  We use refinement degree 7 because the root mean square velocity converges at greater refinement degree while keeping average runtime very low.
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.8\textwidth]{cookbooks/benchmarks/van-keken/smoothing-parameter.png}
+	\caption{\it  Benchmark (using smoothed out interface): compositional field at time t=0 using smoothing parameter size: a) 0.002, b) 0.02, c) 0.05, d) 0.1, e) 0.2, f) 2}
+	\label{fig:vk-5}
+\end{figure}
+
+The evolution in time of the resulting compositional fields (Fig.~\ref{fig:vk-6}) shows that the first peak converges as the smoothed interface decreases. There is a good agreement for the first peak for smoothing parameters lower than 0.1. This is because the first diaper is slower for thicker interfaces and therefore appears at later times. No second peak seems to appear for smoothing parameters 0.2 and 2.  For these two cases the system behaves like three layer compositional fields.
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.8\textwidth]{cookbooks/benchmarks/van-keken/smoothing-parameter-velocity.png}
+	\caption{\it  benchmark with smoothed initial conditions for the compositional field using refinement degree 7 for different smoothing parameters.}
+	\label{fig:vk-6}
+\end{figure}
+
+Now let us further add a two-layer viscosity model to the domain. Let's assume the viscosity value of the upper heavier layer is $\eta_{t}$ and the viscosity value of the lower lighter layer is $\eta_{b}$. Based on the initial constant viscosity value 1$\times10^{2}$ Pa$\times$s, we set the viscosity proportion $\frac{\eta_{t}}{\eta_{b}}=0.1, 0.01$, meaning the viscosity of the upper, heavier layer is still 1$\times10^{2}$ Pa$\times$s, but the viscosity of the lower, lighter layer is now either 10 or 1 Pa$\times$s, respectively. The viscosity profiles of the discontinuous and smooth models are shown in Fig.~\ref{fig:vk-7}.
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.8\textwidth]{cookbooks/benchmarks/van-keken/initial_contrast_viscosity.png}
+	\caption{\it  benchmark using layers of different viscosities. The left image is the discontinuous case, while right is the smooth.  Both are shown at t=0.}
+	\label{fig:vk-7}
+\end{figure}
+
+Using the original input parameter file, running the cases in 8 initial refinement degree, and also adding the two-layer viscosity model, the temperature fields at the end time, t=2000 s, for both benchmark cases, discontinuous and smooth, and both viscosity proportions, 0.1 and 0.01, are shown in Fig.~\ref{fig:vk-8}.
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.8\textwidth]{cookbooks/benchmarks/van-keken/final_contrast_viscosity.png}
+	\caption{\it  benchmark two-layer viscosity model at final timestep, t=2000. Discontinuous cases are the left images, smooth cases are the right. The upper images are $\frac{\eta_{t}}{\eta_{b}}=0.1$, and the lower are $\frac{\eta_{t}}{\eta_{b}}=0.01$.}
+	\label{fig:vk-8}
+\end{figure}
+
+Compared to the results of the constant viscosity throughout the domain, the plumes obviously rise up faster when adding the two-layer viscosity model. Also, the larger the viscosity difference is, the earlier the plumes appear and the faster their ascent. To further reveal the effect of the two-layer viscosity model, we also plot the evolution of the fluids' average velocity over time, as shown in Fig.~\ref{fig:vk-9}.
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.8\textwidth]{cookbooks/benchmarks/van-keken/rms_contrast_viscosity.png}
+	\caption{\it Evolution of the root mean square velocity as a function of time for different viscosity contrast proportions (0.1/0.01) for both discontinuous and smooth models.}
+	\label{fig:vk-9}
+\end{figure}
+
+We can observe that when the two-layer viscosity model is added, there is only one apparent peak for each case. The first peaks of the 0.01 viscosity contrast tests appear earlier and are larger in magnitude than those of 0.1 viscosity contrast tests.  There are no secondary plumes and the whole system tends to reach stability after around 500 seconds.
 
 
 
