Text edit of parameter.tex, adiabatic_boundary.h and adibatic_bondary.cc to remind users of the formation of the input file. Upload adiabatic_boundary.prm and adiabatic_boundary.txt.

--- a/doc/manual/parameters.tex
+++ b/doc/manual/parameters.tex
@@ -3570,7 +3570,7 @@ If the function you are describing represents a vector-valued function with mult
 
 `spherical hexagonal perturbation': An initial temperature field in which the temperature is perturbed following an $N$-fold pattern in a specified direction from an otherwise spherically symmetric state. The class's name comes from previous versions when the only option was $N=6$.
 
-`adiabatic boundary': An initial temperature condition that allows for discretizing the model domain into two layers separated by a user-defined isotherm using a table look-up approach. The user includes an input ascii data file that is formatted as 3 columns of 'latitude', 'longitude', and 'depth', where 'depth' is in kilometers and represents that depth of an initial temperature of 1673.15 K. See Initial conditions/Adiabatic boundary for more details about the file formatting. The temperature is defined from the surface (273.15 K) to the isotherm as a linear gradient. Below the isotherm the temperature increases adiabatically (0.0005 K per meter). This initial temperature condition is designed specifically for the ellipsoidal chunk geometry model.
+`adiabatic boundary': An initial temperature condition that allows for discretizing the model domain into two layers separated by a user-defined isotherm using a table look-up approach. The user includes an input ascii data file that is formatted as 3 columns of 'latitude', 'longitude', and 'depth', where 'depth' is in kilometers and represents that depth of an initial temperature of 1673.15 K. The latitudinal and longitudinal bounds of the ascii input data file needs to be at least 1 degree wider than the bounds you use to define the ellipsoid chunk geometry model. See Initial conditions/Adiabatic boundary for more details about the file formatting. The temperature is defined from the surface (273.15 K) to the isotherm as a linear gradient. Below the isotherm the temperature increases adiabatically (0.0005 K per meter). This initial temperature condition is designed specifically for the ellipsoidal chunk geometry model. 
 
 
 {\it Possible values:} [Selection S40RTS perturbation|SAVANI perturbation|adiabatic|ascii data|function|harmonic perturbation|inclusion shape perturbation|mandelbox|perturbed box|polar box|solidus|spherical gaussian perturbation|spherical hexagonal perturbation|adiabatic boundary]
